# Mahoraga

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/universe/: etfs.yaml
data/universe/russell1000/: events.yaml  seed.yaml
data/universe/sp500/: events.yaml  seed.yaml
docs/: PROGRESS.md
docs/convergence/: 2026-07-06-report.md  2026-07-18-report.md
docs/measurements/: phase-0-exit-verification.md  phase-0-llm-throughput.md  phase-1-exit-verification.md  phase-2-exit-verification.md
docs/project_plan/: MAHORAGA_PROJECT_PLAN.docx  MAHORAGA_PROJECT_PLAN.md
docs/research/: ollama-host-vs-docker.md  openclaw-subagent-model.md
docs/runbooks/: autoresearch-training.md  paper-window.md
docs/superpowers/specs/: 2026-04-25-mahoraga-architecture-decomposition.md  2026-04-25-nemoclaw-autoresearch-integration.md  2026-04-26-architecture-revision-consolidated-assistant.md  2026-04-26-phase-0-substrate-bringup-spec.md  2026-04-26-phase-1-foundation-spec.md  2026-04-26-phase-2-five-wall-fortress-spec.md  2026-04-26-phase-3-autoresearch-loop-spec.md  2026-04-26-phase-4-intelligence-layer-spec.md  2026-04-26-phase-5-broker-paper-trading-spec.md  2026-04-26-phase-6-governance-live-prep-spec.md  2026-04-26-phase-7-live-trading-stage-1-spec.md  2026-04-26-phase-8-expansion-spec.md  2026-05-03-hindsight-memory-layer-revision.md  2026-05-03-phase-3-seven-role-amendment.md  2026-06-12-hermes-runtime-migration.md
infra/ci/: check-subagent-scopes.sh
infra/ci/tests/: test_scope_guard.py  test_secrets_audit.py  test_subagent_defs.py  test_web_research_policy.py
infra/hindsight/: init.sql
infra/litellm/: config.yaml
infra/nemoclaw/: blueprint.yaml  onboard.env
infra/nemoclaw/policies/: egress.yaml  filesystem.yaml
infra/nemoclaw/skills/: README.md
infra/nemoclaw/subagents/: archivist.md  guardian.md  hunter.md  planner.md  reporter.md  researcher.md  reviewer.md
infra/ollama/: docker-compose.override.yml
infra/ops/: com.mahoraga.paper-window.plist  com.mahoraga.train-window.plist
infra/postgres/migrations/: 001_extensions.sql  002_schemas.sql  003_audit.sql  004_drop_knowledge_schema.sql  005_experiments.sql  006_master_pointer.sql  007_trades.sql
scripts/: build_sp500_universe.py  check-env.sh  convergence_report.py  dashboard.py  hermes_gateway_watchdog.py  measure_llm_throughput.py  onboard.sh  paper_window.sh  pull_spy_daily.py  run_autoresearch.py  run_intel.py  run_paper.py  run_telegram_bot.py  train_window.sh  wire_hindsight_mcp.sh
services/trader/backtest/: README.md  __init__.py  base.py  engine.py  risk.py  strategies.py
services/trader/contracts/: news-reader.schema.json  package-reader.schema.json  researcher.schema.json  sector-reader.schema.json  transcript-reader.schema.json
services/trader/data/: README.md  audit.py  coverage.py  ingest.py
services/trader/execution/: __init__.py  active_strategy.py  alpaca_broker.py  calendar_gate.py  compliance.py  context.py  executor.py  firewall.py  model.py  reconcile.py  signal.py  sizing.py  stops.py  trade_store.py  watchlist.py
services/trader/features/: README.md  __init__.py  base.py  macro.py  micro.py  momentum.py  pipeline.py  sentiment.py  statistical.py  store.py  trend.py  volatility.py  volume.py  volume_profile.py
services/trader/gates/: __init__.py  gates.py
services/trader/intel/: __init__.py  archivist_synthesis.py  researcher.py  transition.py  web_research.py
services/trader/news/: __init__.py  aggregator.py  alpaca_news.py  classifier.py  lexicon.py  refresh.py  shock.py
services/trader/ops/: __init__.py  attribution.py  audit.py  bot_providers.py  convergence.py  dashboard_data.py  halt.py  paper_stats.py  reporter.py  telegram.py
services/trader/regime/: README.md  __init__.py  base.py  detector.py  macro.py  meso.py  micro.py  store.py
strategies/: README.md
tests/unit/: test_hermes_gateway_watchdog.py
(+235 files in other folders)
