[project]
name = "mahoraga"
version = "0.0.0"
requires-python = ">=3.11"

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = [
    "vendor",                  # Vendored upstreams (NemoClaw, tradingagents, hindsight, autoresearch, multiautoresearch) — they have their own linters
    "data",                    # Bind-mount targets, gitignored
    "docs/project_plan",       # Reference plan, not source
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RET"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests", "services"]
addopts = "-ra -q"
markers = [
    "integration: requires the NemoClaw sandbox to be onboarded and running",
]
