[project]
name = "mahoraga"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "pyarrow>=15",
    "httpx>=0.27",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=1",
    "psycopg[binary]>=3.2",
    "respx>=0.21",  # httpx test fixtures (used in chunk 1+ tests)
]

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = [
    "vendor",                  # Vendored upstreams (NemoClaw, tradingagents, hindsight, autoresearch, multiautoresearch) — they have their own linters
    "data",                    # Bind-mount targets, gitignored
    "docs/project_plan",       # Reference plan, not source
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RET"]

[tool.ruff.lint.per-file-ignores]
# `phase-0` has a hyphen by design (matches the spec directory naming).
"tests/integration/phase-0/**" = ["N999"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests", "services"]
addopts = "-ra -q"
markers = [
    "integration: requires the NemoClaw sandbox to be onboarded and running",
]
