[project]
name = "mahoraga"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "pyarrow>=15",
    "httpx>=0.27",
    "yfinance>=0.2.40",
    "pandas-market-calendars>=4.4",
    "psycopg[binary]>=3.2",
    "pyyaml>=6",
    "risklabai>=2.0.1",
    "quantstats>=0.0.81",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=1",
    "psycopg[binary]>=3.2",
    "respx>=0.21",  # httpx test fixtures (used in chunk 1+ tests)
]

# Mahoraga is a multi-tree repo (docs/, data/, infra/, services/, tests/, vendor/).
# Tell setuptools to only treat the `services` tree as installable Python; everything
# else (vendored upstreams, fixtures, specs) stays out of the wheel.
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["services*"]
exclude = ["services*.tests*"]

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = [
    "vendor",                  # Vendored upstreams (NemoClaw, tradingagents, hindsight, autoresearch, multiautoresearch) — they have their own linters
    "data",                    # Bind-mount targets, gitignored
    "docs/project_plan",       # Reference plan, not source
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RET"]

[tool.ruff.lint.per-file-ignores]
# `phase-0` / `phase-1` / `phase-2` have hyphens by design (match the spec directory naming).
"tests/integration/phase-0/**" = ["N999"]
"tests/integration/phase-1/**" = ["N999"]
"tests/integration/phase-2/**" = ["N999"]
"tests/integration/phase-3/**" = ["N999"]
"tests/integration/phase-4/**" = ["N999"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests", "services"]
addopts = "-ra -q"
markers = [
    "integration: requires the NemoClaw sandbox to be onboarded and running",
]
